Fix all tables overflows

--- a/frontend/src/app/analytics-components/germplasm/germplasm.component.scss
+++ b/frontend/src/app/analytics-components/germplasm/germplasm.component.scss
@@ -516,6 +516,8 @@
 
 @media (max-width: 1600px) {
   .filters{
+    overflow-y: auto;
+
     &__container {
       justify-content: center;
       text-align: center;
