--- a/frontend/src/app/analytics-components/study/study.component.scss
+++ b/frontend/src/app/analytics-components/study/study.component.scss
@@ -485,6 +485,8 @@
 
 @media (max-width: 1600px) {
   .filters{
+    overflow-y: auto;
+
     &__container {
       justify-content: center;
       text-align: center;
